# beer_api

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  notes.txt  pyproject.toml  requirements.txt  sql_app.db
answers/: Answers.docx
app/: beer_data_analysis.ipynb  enums.py  errors.py  main.py  schemas.py  settings.py  sql_app.db
app/auth/: verify.py
app/data/: beers_all.json  beers_cleaned.json
app/dependencies/: excercise.py  punk_client.py  sql_app.db
app/routers/: beers.py  data.py  fermentation.py  health.py
app/sql/: crud.py  database.py  models.py
tests/: conftest.py
tests/routers/: test_beers.py  test_data.py  test_health.py
